--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import 'tailwindcss';
+
 @plugin "@tailwindcss/typography";
 @plugin "daisyui" {
   themes: all;
 }
 
+@plugin "daisyui/theme" {
+  name: 'caramellatte';
+  default: false;
+  prefersdark: false;
+  color-scheme: 'light';
+  --color-base-100: #fdf6eb;
+  --color-base-200: #e9ceac;
+  --color-base-300: #fef7ea;
+  --color-base-content: oklch(40% 0.123 38.172);
+  --color-primary: oklch(0% 0 0);
+  --color-primary-content: oklch(100% 0 0);
+  --color-secondary: #7f6748;
+  --color-secondary-content: oklch(90% 0.076 70.697);
+  --color-accent: oklch(46.44% 0.111 37.85);
+  --color-accent-content: oklch(90% 0.076 70.697);
+  --color-neutral: oklch(55% 0.195 38.402);
+  --color-neutral-content: oklch(98% 0.016 73.684);
+  --color-info: oklch(42% 0.199 265.638);
+  --color-info-content: oklch(90% 0.076 70.697);
+  --color-success: oklch(43% 0.095 166.913);
+  --color-success-content: oklch(90% 0.076 70.697);
+  --color-warning: oklch(82% 0.189 84.429);
+  --color-warning-content: oklch(41% 0.112 45.904);
+  --color-error: oklch(70% 0.191 22.216);
+  --color-error-content: oklch(39% 0.141 25.723);
+  --radius-selector: 2rem;
+  --radius-field: 0.5rem;
+  --radius-box: 1rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 2px;
+  --depth: 1;
+  --noise: 1;
+  --font-sans: 'Montserrat';
+  --font-serif: 'Montserrat';
+}
+
 body,
 html {
   @apply bg-base-100 text-base-content h-full w-full border-0 p-0 m-0 box-border;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in-element {
+  opacity: 0;
+  animation: fadeIn 0.6s ease-in-out;
+  animation-fill-mode: forwards;
 }
